@@ -1,19 +1,25 @@
 .TH TICKIT_RENDERBUFFER_COPYRECT 3
 .SH NAME
-tickit_renderbuffer_copyrect \- copies a rectangular region of a buffer
+tickit_renderbuffer_copyrect, tickit_renderbuffer_moverect \- copy or move a rectangular region of a buffer
 .SH SYNOPSIS
 .EX
 .B #include <tickit.h>
 .sp
 .BI "void tickit_renderbuffer_copyrect(TickitRenderBuffer *" rb ", TickitRect " dest ,
 .BI "        TickitRect " src );
+.BI "void tickit_renderbuffer_moverect(TickitRenderBuffer *" rb ", TickitRect " dest ,
+.BI "        TickitRect " src );
 .EE
 .sp
 Link with \fI\-ltickit\fP.
 .SH DESCRIPTION
-\fBtickit_renderbuffer_copyrect\fP() copies the rectangular region in the buffer from the rectangle given by \fIsrc\fP into the location given by \fIdest\fP. These two regions may overlap.
+\fBtickit_renderbuffer_copyrect\fP() copies the rectangular region in the buffer from the rectangle given by \fIsrc\fP into the location given by \fIdest\fP.
+.PP
+\fBtickit_renderbuffer_moverect\fP() moves content in the rectangular region in the buffer given by \fBsrc\fP into the location given by \fIdest\fP, resetting the region migrated out from back to the skip state.
+.PP
+In each case, the two regions may overlap. These functions will also copy cells in skip state; that is, cells set to skip in the source region are set to skip in the destination.
 .SH "RETURN VALUE"
-This function returns no value.
+These functions return no value.
 .SH "SEE ALSO"
 .BR tickit_renderbuffer_new (3),
 .BR tickit_renderbuffer_flush_to_term (3),
